# ml4science-apertus-rag-evaluation

./: .gitignore  Dockerfile  README.md  README_CSCS.md  cscs_docs.json  env.example  extract_warc_batch.sh  index.py  pyproject.toml  query.py  requirements.txt  run_warc.py
data/database/: dedup_html.sqlite  dedup_pdf.sqlite
data/sample/jsonl_out/html/: ARCHIVEIT-19945-TEST-JOB2537999-0-SEED4432726-20250409125132954-00000-uhxaspzf.jsonl  ARCHIVEIT-19945-TEST-JOB2538000-0-SEED4432727-20250409125201867-00000-9618ziof.jsonl  ARCHIVEIT-19945-WEEKLY-JOB2538523-SEED3004629-20250410105708162-00000-h3.jsonl  (+1 more)
data/test_set/: eth_questions_100.json
data_sample/urls/: 2025-11-20_19945_topics.xlsx
docs/: baseline_evaluation.md  baseline_results_summary.md  evaluation_method.md  plot_analysis.md  rag_evaluation_plan.md  rag_vs_baseline_report.md
evaluation/: EVALUATION_BEST_PRACTICES.md  evaluation-qwen3.xlsx
evaluation/results/: EVALUATION_ANALYSIS.md  apertus_metrics.xlsx  qwen_metrics.xlsx
jobs/: baseline.sbatch  extractor.sbatch  indexer.sbatch  processing.sbatch  rag.sbatch  warc_extractor.sbatch  warc_tools.toml
prompts/: judge_prompt_baseline.txt  judge_prompt_rag.txt  judge_prompt_strict.txt
results/: Qwen_Qwen3-Next-80B-A3B-Instruct_scores.json  claude-sonnet-4.5_responses.json  claude-sonnet-4.5_scores.json  gpt-5.2_responses.json  gpt-5.2_scores.json  swiss-ai_Apertus-8B-Instruct-2509_scores.json
results/baseline_evaluation/: Qwen_Qwen3-8B_responses.json  Qwen_Qwen3-8B_scores.json  claude-sonnet-4.5_scores.json  gpt-5.2_scores.json  swiss-ai_Apertus-8B-Instruct-2509_responses.json  swiss-ai_Apertus-8B-Instruct-2509_scores.json
results/rag_evaluation/: Qwen_Qwen3-8B_rag_responses.json  Qwen_Qwen3-8B_rag_scores.json  swiss-ai_Apertus-8B-Instruct-2509_rag_responses.json  swiss-ai_Apertus-8B-Instruct-2509_rag_scores.json
scripts/: compare_baseline_rag.py  compare_models.py  evaluate_answers.py  evaluation_utils.py  generate_improved_plots.py  run_comprehensive_evaluation.py  run_evaluation.py  run_rag_evaluation.py  score_rag_responses.py  score_responses.py
src/extractor/: utils.py
src/warc_tools/: __init__.py
src/warc_tools/baseline/: __init__.py  cli.py
src/warc_tools/extractor/: __init__.py  cli.py  config.py  utils.py  warc_extractor.py
src/warc_tools/indexer/: __init__.py  cli.py  config.py  indexer.py  utils.py
src/warc_tools/processing/: __init__.py  cli.py  deduplicate.py
src/warc_tools/rag/: __init__.py  cli.py  rag_pipeline.py  utils.py
(+2 files in other folders)
