[project]
name = "warc-tools"
version = "0.0.0"
description = "Tools for extracting ETHZ webarchive WARC data, indexing JSONL into Elasticsearch, and querying via RAG."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  # extractor deps
  "warcio",
  "beautifulsoup4",
  "pdfplumber",
  "pandas",
  "openpyxl",
  "python-dotenv",

  "huggingface-hub==0.24.0",

  # indexer deps
  "elasticsearch",
  "llama-index-core",
  "llama-index-embeddings-ollama",
  "llama-index-embeddings-openai",
  "llama-index-embeddings-huggingface",
  "llama-index-vector-stores-elasticsearch",

  # RAG / LLM deps
  "llama-index-llms-ollama",
  "llama-index-llms-openai",
  "llama-index-llms-huggingface",
]

[project.scripts]
warc-extract  = "warc_tools.extractor.cli:main"
warc-index    = "warc_tools.indexer.cli:main"
warc-rag      = "warc_tools.rag.cli:main"
warc-baseline = "warc_tools.baseline.cli:main"
warc-dedup    = "warc_tools.processing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
